  server on a client was not possible because the "SyncEvolutionClient"
  configuration was picked instead (MB #10004). The latter has to
  be used when configuring a SyncEvolution server to talk to a
  SyncEvolution client.
* restore: no longer updates the time of the backup (MB #9963)
* various minor improvements and fixes, see ChangeLog


SyncEvolution 1.0 beta 1 -> beta 2, 23.02.2010
==============================================

Several new features and some bug fixing. Despite some open issues
(see below), this release is ready for getting packaged in staging
areas of distros as replacement for 0.9.2.

As before, documentation for 1.0 is only available in the
"Development" section of syncevolution.org, including HOWTOs for
setting up the HTTP SyncML server and phones manually.

Setting up a phone became a bit easier with beta 2, because
SyncEvolution is now integrated with the GNOME Bluetooth panel: once a
device with SyncML client support is paired, a button offers to bring
up the sync-UI and configure or synchronize with that device. We do a
fuzzy match against the Bluetooth device name to find a suitable
template (not manufacturer/model, because that is not readily
available). Still not many (read: hardly any) templates available,
though.

The binaries on syncevolution.org are compiled with Bluetooth support.
libbluetooth2 or libbluetooth3 should be installed, but are not
essential. If there is no suitable version of it, the Bluetooth
channel has to be selected manually as part of the syncURL.

Unexpected slow syncs are prevented by default, in contrast to beta 1
where this feature was available but turned off. When an unexpected
slow sync is detected in a client, users have to follow the
instructions provided by the command line or sync-ui and choose how to
proceed (explicitly request slow sync, refresh from server or client,
restore from backup). SyncEvolution as server currently cannot prevent
slow syncs, even when initiating the sync with a phone.
