@@ -4,3 +4,4 @@ syncURL = http://my.funambol.com/sync
 WebURL = http://my.funambol.com
 enableWBXML = FALSE
 ConsumerReady = TRUE
+RetryInterval = 0
